@@ -7,6 +7,24 @@ ActiveRecord::Schema.define(:version => 20090317164830) do
     t.datetime "updated_at"
   end
 
+  create_table "dents", :force => true do |t|
+    t.integer  "android_id"
+    t.string   "description"
+    t.datetime "deleted_at"
+  end
+
+  create_table "dings", :force => true do |t|
+    t.integer  "dent_id"
+    t.string   "description"
+    t.boolean  "not_deleted"
+  end
+
+  create_table "scratches", :force => true do |t|
+    t.integer  "dent_id"
+    t.string   "description"
+    t.datetime "deleted_at"
+  end
+
   create_table "androids_places", :force => true, :id => false do |t|
     t.integer  "android_id"
     t.integer  "place_id"
